--- a/Project3/pop-qiuz/src/app/components/questions/questions.component.css
+++ b/Project3/pop-qiuz/src/app/components/questions/questions.component.css
@@ -1,21 +1,21 @@
-
+h1{
+    text-align: center;
+    background-color: rgba(128, 0, 128, 0.493)
+    
+}
 li{
-    margin: 3px;
-    font-size: medium;
+    list-style: none;
+    margin: 8px;
+    text-align: center;
+    font-size: large;
+    font-weight: bold;
     padding: 3px;
-    border: 2px black solid;
+    border: 2px rgba(24, 14, 53, 0.589) solid;
     border-radius: 10px;
-    align-self: center;
     cursor: pointer;
-    background-color: burlywood;
+    background-color: rgba(209, 137, 103, 0.315);
     
 }
 li:hover{
-    background-color:cadetblue;
-}
-ol{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 1fr);
-    
+    background-color: rgba(209, 136, 103, 0.63);
 }
