--- a/Project3/pop-qiuz/src/app/components/side-answars/side-answars.component.css
+++ b/Project3/pop-qiuz/src/app/components/side-answars/side-answars.component.css
@@ -1,5 +1,13 @@
 .side-answers{
-    border: 2px  solid red;
-    margin: 3px;
-    padding: 2px;
+    font-size: medium;
+    font-weight: bold;
+    border: 2px solid red;
+    background-color: rgba(218, 116, 116, 0.37);
+    border-radius: 10px;
+    margin: 15px;
+    padding: 5px;
+    height: 60px;
+}
+p, div{
+    text-align: center;
 }
